bad/return_void_in_func_returning_void.example_compiler_output
ERROR
[1mbad/return_void_in_func_returning_void.lat:3:22: [1;31merror: [0;1mreturned value of type `void` is not convertible to return type `void`, use `return;` instruction instead[m
void test() { return foo(); }
                     [1;32m^[m
